--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Figtree");
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -8,26 +9,95 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+html {
+  background: linear-gradient(to bottom, #f6fafe, #ffffff);
+  min-height: 100vh;
+}
+body {
+  color: #020d1a;
+  font-family: "Figtree";
+}
+
+.text-red-theme {
+  color: #e94f37;
+}
+
+.text-blue-theme {
+  color: #3f88c5;
+}
+
+.text-green-theme {
+  color: #44bba4;
+}
+
+.text-white-theme {
+  color: #f6fafe;
+}
+
+.text-black-theme {
+  color: #020d1a;
+}
+
+.purple-gradient-font {
+  background: -webkit-linear-gradient(top, #3f88c5, #44bba4);
+  background-clip: text;
+  font-weight: bold;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.red-gradient-font {
+  background: -webkit-linear-gradient(top, #ff7347, #13002c);
+  background-clip: text;
+  font-weight: bold;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.blue-gradient-font {
+  background: -webkit-linear-gradient(top, #8bc7f3, #063062);
+  background-clip: text;
+  font-weight: bold;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.btn-gradient {
+  background: linear-gradient(to right, #fffbf7, #f2e1cf);
+  background-size: 200% 100%;
+  transition: all 0.5s, filter 0.5s, transform 0.15s;
+  animation: gradient-animation 3s infinite linear;
+}
+
+.btn-gradient:hover {
+  filter: brightness(102%);
+  transform: scale(98%);
+}
+
+.btn-gradient:active {
+  filter: brightness(106%);
+  transform: scale(94%);
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.fade-in {
+  animation: fadeInAnimation 1.5s forwards;
+  opacity: 0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@keyframes fadeInAnimation {
+  to {
+    opacity: 1;
   }
 }
